Add recent articles with background image and content

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,4 @@
 @import 'header.scss';
-@import 'main-container';
-@import 'body';
+@import 'main-container.scss';
+@import 'body.scss';
+@import 'variables.css';
