--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,6 +1,8 @@
 header {
   width: 100%;
   height: 48px;
+  position: fixed;
+  top: 0;
   border-bottom: 1px solid #ecf0f1;
   box-shadow: 0 3px 16px -6px #bdc3c7;
 
@@ -11,7 +13,7 @@ header {
 
     .logo-img {
       width: 106px;
-      height: 48px;
+      height: auto;
     }
 
     .nav-icons {
