--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'header.scss';
 @import 'main-container.scss';
 @import 'body.scss';
-@import 'variables.css';
+@import 'variables.scss';
+@import 'latest-news.scss';
