--- a/styles/_main-container.scss
+++ b/styles/_main-container.scss
@@ -18,16 +18,23 @@
       .content {
         color: white;
         position: relative;
-        top: 65px;
-        left: 10px;
+        margin: 0 5px 5px 5px;
+        bottom: -40%;
         text-shadow: 0 1px 0 black;
 
         h2 {
           margin: 0 5px 0 0;
+          font-size: 20px;
         }
 
         h3 {
           margin-bottom: 0;
+          font-weight: 300;
+          font-size: 14px;
+        }
+
+        span {
+          font-size: 12px;
         }
       }
     } // end of article
