Add latest funding section and utilities.scss

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,3 +3,6 @@
 @import 'body.scss';
 @import 'variables.scss';
 @import 'latest-news.scss';
+@import 'utilities.scss';
+@import 'latest-funding.scss';
+    
