--- a/styles/_main-container.scss
+++ b/styles/_main-container.scss
@@ -10,17 +10,24 @@
 
     article {
       .cover-image {
+        position: relative;
         height: 192px;
         width: 100%;
         margin-top: 20px;
       }
 
       .content {
-        color: white;
-        position: relative;
-        margin: 0 5px 5px 5px;
-        bottom: -40%;
+        position: absolute;
+        left: 4px;
+        right: 4px;
+        bottom: 4px;
+        padding: 14px 12px;
         text-shadow: 0 1px 0 black;
+        color: white;
+
+        span {
+          padding-right: 5px;
+        }
 
         h2 {
           margin: 0 5px 0 0;
@@ -29,8 +36,8 @@
 
         h3 {
           margin-bottom: 0;
-          font-weight: 300;
-          font-size: 14px;
+          font-weight: 500;
+          font-size: 13px;
         }
 
         span {
