--- a/styles/_latest-news.scss
+++ b/styles/_latest-news.scss
@@ -1,4 +1,5 @@
-.latest-news {
+.latest-news, 
+.latest-deals {
   position: relative;
   margin: 0 auto;
   width: 90%;
@@ -30,4 +31,4 @@
       }
     }
   }
-} // end of latest-news
+} // end of latest-news/latest deals
