--- a/styles/_main-container.scss
+++ b/styles/_main-container.scss
@@ -14,19 +14,21 @@
         height: 192px;
         width: 100%;
         margin-top: 20px;
+        background-repeat: no-repeat;
       }
 
       .content {
         position: absolute;
         left: 4px;
         right: 4px;
-        bottom: 4px;
+        bottom: 0;
         padding: 14px 12px;
         text-shadow: 0 1px 0 black;
         color: white;
 
         span {
           padding-right: 5px;
+          font-size: 12px;
         }
 
         h2 {
@@ -38,10 +40,6 @@
           margin-bottom: 0;
           font-weight: 500;
           font-size: 13px;
-        }
-
-        span {
-          font-size: 12px;
         }
       }
     } // end of article
