--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -74,7 +74,7 @@
 
     hr {
       margin: 0 0 0 -15px;
-      border-top: 0.5px solid #dfe6e9;
+      border: 0.5px solid #dfe6e9;
     }
   }
 } // end of articles
