--- a/styles/_latest-funding.scss
+++ b/styles/_latest-funding.scss
@@ -72,7 +72,7 @@
 
       hr {
         display: block;
-        border-top: 1px solid rgba(255,68,34,.25);
+        border: 0.5px solid rgba(255,68,34,.25);
         margin-top: 20px;
       }
 
