Add second header for min-width 1024px

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,8 @@
 @import 'header.scss';
-@import 'main-container.scss';
 @import 'body.scss';
+@import 'main-container.scss';
 @import 'variables.scss';
+@import 'recent-articles.scss';
 @import 'latest-news.scss';
 @import 'utilities.scss';
 @import 'latest-funding.scss';
