--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -7,6 +7,12 @@ header {
   background-color: #fff;
   box-shadow: 0 3px 16px -6px #bdc3c7;
   z-index: 10;
+} // end of header
+
+.first-header {
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 
   .container {
     height: 100%;
@@ -35,6 +41,83 @@ header {
       .menu-icon {
         color: #f42;
       }
+    } // end of nav-icons
+  } // end of container
+} // end of first-header
+
+.second-header {
+  @media screen and (max-width: 425px) {
+    display: none;
+  }
+
+  height: 82px;
+
+  .navbar {
+    position: relative;
+    height: 32px;
+    background: #131313;
+    font-size: 13px;
+    font-weight: 500;
+
+    ul {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      padding: 0 0 0 20px;
+      margin: 0;
+
+      li {
+        display: inline-block;
+        text-decoration: none;
+        color: hsla(0,0%,100%,.6);
+        padding-right: 10px;
+      }
     }
-  } // end of nav-icons
-} // end of header
+
+    .right-links {
+      left: 70%;
+    }
+  } // end of navbar
+
+  nav {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    ul {
+      padding: 0 0 0 20px;
+
+      li {
+        text-decoration: none;
+        display: inline-block;
+        text-transform: uppercase;
+        padding-right: 15px;
+        color: #aaa;
+        font-size: 14px;
+        font-weight: 500;
+      }
+    }
+
+    .nav-icons {
+      ul {
+        margin: 0;
+
+        li {
+          
+
+          &:last-child {
+            padding: 16px !important;
+            border-left: 1px solid #ecf0f1;
+          }
+         
+          i {
+            font-size: 16px;
+            color: #aaa
+          }
+        }
+      }
+    } // end of nav-icons
+  } // end of nav
+} // end of second-header
+
+
