--- a/styles/_latest-news.scss
+++ b/styles/_latest-news.scss
@@ -4,23 +4,49 @@
   margin: 0 auto;
   width: 90%;
   margin-top: 80px;
+
+  @include tablet {
+    width: 95%;
+    margin-top: 140px;
+  }
   
   article {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 
+    @include tablet {
+      width: 30%;
+      display: inline-block;
+      padding: 10px;
+    }
+
     img {
       width: 75px;
       height: 70px;
+
+      @include tablet {
+        display: block;
+        width: 100%;
+        height: 115px;
+      }
     }
 
     .content {
       margin-left: 20px;
 
+      @include tablet {
+        margin: 0;
+      }
+
       .title {
         font-size: 14px;
         font-weight: 700;
+
+        @include tablet {
+          margin: 10px 0 0 0;
+          font-weight: 900;
+        }
       }
 
       span {
@@ -32,3 +58,4 @@
     }
   }
 } // end of latest-news/latest deals
+
