--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -2,6 +2,10 @@
   width: 90%;
   margin: 0 auto;
 
+  @include tablet {
+    width: 97%;
+  }
+
   .cover-image {
     height: 280px;
     position: relative;
@@ -22,6 +26,7 @@
       h2 {
         margin: 0 5px 0 0;
         font-size: 20px;
+        font-weight: 900;
       }
 
       h3 {
@@ -42,13 +47,13 @@
       padding: 10px 14px 0;
 
       h5 {
-        font-weight: 300;
+        font-weight: 500;
         margin: 5px 0;
       }
 
       p {
         margin: 0;
-        font-weight: 700;
+        font-weight: 900;
         font-size: 14px;
       }
     }
@@ -75,6 +80,18 @@
     hr {
       margin: 0 0 0 -15px;
       border: 0.5px solid #dfe6e9;
+    }
+  }
+
+  .container {
+    @include tablet {
+      display: flex;
+      flex-wrap: wrap;
+  
+      article {
+        width: 47.3%;
+        padding: 10px;
+      }
     }
   }
 } // end of articles
