--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -5,7 +5,7 @@ footer {
 
   .footer-links {
     height: 120px;
-    padding: 30px 18px;
+    padding: 30px 14px;
     background-color: #131313;
     margin: 0 auto;
 
@@ -14,6 +14,10 @@ footer {
         display: inline-block;
         list-style: none;
         padding: 0 5px 0 0;
+
+        @include tablet {
+          padding: 0 10px 0 0;
+        }
   
         a {
           display: block;
@@ -60,8 +64,17 @@ footer {
     font-size: 13px;
     text-align: center;
 
+    @include tablet {
+      height: 100%;
+    }
+
     span {
+      display: block;
       line-height: 1.5;
+
+      @include tablet {
+        display: inline-block;
+      }
     }
 
     .logo-img {
