--- a/styles/_latest-funding.scss
+++ b/styles/_latest-funding.scss
@@ -2,6 +2,10 @@
   width: 90%;
   margin: 0 auto;
 
+  @include tablet {
+    width: 95%;
+  }
+
   ul {
     list-style: none;
     padding: 0;
@@ -10,77 +14,101 @@
     li {
       padding: 5px 0;
       font-size: 14px;
+
+      @include tablet {
+        font-size: 16px;
+      }
     }
   }
 
-  .card {
-    margin: 20px 0 10px 0;
+  .container {
+    @include tablet {
+      display: flex;
 
-    img {
-      position: absolute;
-      width: 60px;
-      height: 60px;
-      padding: 10px;
-    }
-
-    .title {
-      width: 100%;
-      height: 43px;
-      background-color: #f42;
-
-      h4 {
-        position: relative;
-        margin-left: 82px;
-        padding-top: 12px;
-        font-size: 18px;
-        color: white;
+      .card {
+        flex: 1;
+        padding: 5px;
+        margin: 0 !important;
       }
     }
+  
+    .card {
+      margin: 20px 0 10px 0;
 
-    .price {
-      width: 100%;
-      height: 59px;
-      background: rgba(255,68,34,.08);
+      img {
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        padding: 10px;
 
-      span {
-        display: block;
-        margin-left: 82px;
-        padding-top: 10px;
-        font-weight: 700;
-
-        &:last-child {
-          font-weight: 300 !important;
-          font-size: 11px;
-          padding-top: 2px;
-        }
-      }
-    } // end of price
-
-    .content {
-      background-color:#fef9f9;
-
-      span {
-        display: block;
-        font-size: 12px;
-        font-weight: 300;
-        padding: 15px 16px 0 16px;
-
-        &:last-child {
-          padding: 5px 0 0 0;
+        @include tablet {
+          padding: 35px 10px 0 10px;
         }
       }
 
-      hr {
-        display: block;
-        border: 0.5px solid rgba(255,68,34,.25);
-        margin-top: 20px;
+      .title {
+        width: 100%;
+        height: 43px;
+        background-color: #f42;
+
+        h4 {
+          position: relative;
+          margin-left: 82px;
+          padding-top: 12px;
+          font-size: 18px;
+          color: white;
+        }
       }
 
-      h5 {
-        padding: 0 16px 16px 16px;
-        margin: 0;
-        font-weight: 300;
-      }
-    } // end of content
-  } // end of card
+      .price {
+        width: 100%;
+        height: 59px;
+        background: rgba(255,68,34,.08);
+
+        span {
+          display: block;
+          margin-left: 82px;
+          padding-top: 10px;
+          font-weight: 900;
+
+          &:last-child {
+            font-weight: 300 !important;
+            font-size: 11px;
+            padding-top: 2px;
+          }
+        }
+      } // end of price
+
+      .content {
+        background-color:#fef9f9;
+
+        @include tablet {
+          height: 57%;
+        }
+
+        span {
+          display: block;
+          font-size: 12px;
+          font-weight: 300;
+          padding: 15px 16px 0 16px;
+
+          &:last-child {
+            padding: 5px 0 0 0;
+          }
+        }
+
+        hr {
+          display: block;
+          border: 0.5px solid rgba(255,68,34,.25);
+          margin-top: 20px;
+        }
+
+        h5 {
+          padding: 0 16px 16px 16px;
+          margin: 0;
+          font-weight: 300;
+        }
+      } // end of content
+    } // end of card
+  } // end of container
 } // end of latest-funding
