--- a/styles/_latest-news.scss
+++ b/styles/_latest-news.scss
@@ -6,9 +6,14 @@
   margin-top: 80px;
 
   @include tablet {
-    width: 95%;
+    width: 97%;
     margin-top: 140px;
+
+    h1 {
+      margin-left: 10px;
+    }
   }
+
   
   article {
     display: flex;
@@ -42,10 +47,10 @@
       .title {
         font-size: 14px;
         font-weight: 700;
+        font-weight: 900;
 
         @include tablet {
           margin: 10px 0 0 0;
-          font-weight: 900;
         }
       }
 
@@ -57,5 +62,31 @@
       }
     }
   }
+
+  @include tablet {
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+
+      article {
+        width: 30.6%;
+        padding: 10px;
+      }
+    }
+  }
 } // end of latest-news/latest deals
+
+.latest-deals {
+  @include tablet {
+    img {
+      height: 170px !important;
+    }
+
+    a {
+      margin-right: 13px;
+    }
+  }
+}
+
+
 
