--- a/styles/_latest-news.scss
+++ b/styles/_latest-news.scss
@@ -6,7 +6,7 @@
   margin-top: 80px;
 
   @include tablet {
-    width: 97%;
+    width: 98%;
     margin-top: 140px;
 
     h1 {
@@ -14,17 +14,14 @@
     }
   }
 
+  @include large-laptop {
+    width: 80%;
+  }
   
   article {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-
-    @include tablet {
-      width: 30%;
-      display: inline-block;
-      padding: 10px;
-    }
 
     img {
       width: 75px;
@@ -35,10 +32,14 @@
         width: 100%;
         height: 115px;
       }
+
+      @include large-laptop {
+        height: 135px;
+      }
     }
 
     .content {
-      margin-left: 20px;
+      margin: 0 20px 0 15px;
 
       @include tablet {
         margin: 0;
@@ -51,6 +52,10 @@
 
         @include tablet {
           margin: 10px 0 0 0;
+        }
+
+        @include laptop {
+          font-size: 16px;
         }
       }
 
@@ -70,10 +75,15 @@
 
       article {
         width: 30.6%;
+        display: inline-block;
         padding: 10px;
+
+        @include laptop {
+          width: 23%;
+        }
       }
-    }
-  }
+    } // end of container
+  } // end of tablet
 } // end of latest-news/latest deals
 
 .latest-deals {
@@ -84,6 +94,12 @@
 
     a {
       margin-right: 13px;
+    }
+  } // end of tablet
+
+  @include large-laptop {
+    img {
+      height: 201px !important;
     }
   }
 }
