--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -10,6 +10,12 @@
   }
 }
 
+@mixin large-laptop {
+  @media screen and (min-width: 1440px) {
+    @content;
+  }
+}
+
 @mixin desktop {
   @media screen and (min-width: 1920px) {
     @content;
