--- a/styles/_latest-news.scss
+++ b/styles/_latest-news.scss
@@ -17,6 +17,10 @@
   @include large-laptop {
     width: 80%;
   }
+
+  @include desktop {
+    width: 60%;
+  }
   
   article {
     display: flex;
