--- a/styles/_articles.scss
+++ b/styles/_articles.scss
@@ -10,6 +10,10 @@
     width: 80%;
   }
 
+  @include desktop {
+    width: 60%;
+  }
+
   .cover-image {
     height: 280px;
     position: relative;
