Change the position of right links in the header

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -90,6 +90,10 @@ header {
       @include large-laptop {
         left: 79%;
       }
+
+      @include desktop {
+        left: 84%;
+      }
     }
   } // end of navbar
 
